[package]
name = "Hyperlapser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustube = "0.6.0"
ffmpeg-next = "7.0.0"
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"